deploy/development/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: map-service
  labels:
    app: map-service
spec:
  ports:
  - port: 9080
    name: http
    targetPort: 9080
  selector:
    app: map-app
